--- a/ecommerce_proyecto/src/Header.css
+++ b/ecommerce_proyecto/src/Header.css
@@ -1,3 +1,4 @@
+/*ESTILOS HEADER*/
 *{
     margin: 0;
     padding: 0;
@@ -11,7 +12,6 @@
  .logo{
     display: flex;
     justify-content: center;
-    background-color: #17181C;
     margin: auto;
     height: 270px;
     width: 320px;
