--- a/src/Header.css
+++ b/src/Header.css
@@ -6,15 +6,15 @@
  }
 
  header{
-    background-color: #F9F8FC;
+    background-color: #ffffff;
  }
 
  .logo{
     display: flex;
     justify-content: center;
     margin: auto;
-    height: 270px;
-    width: 320px;
+    height: 240px;
+    width: 300px;
 }
 
 nav{
@@ -27,22 +27,24 @@ nav ul{
    list-style: none;
    display: inline-block;
    padding:18px;
+   margin-top: 8px;
 }
 
 nav ul li{
     float: left;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 nav ul li a {
     color: white;
     font-weight: bold;
     text-decoration: none;
-    font-size: 20px;
-    padding: 18px;
+    font-size: 18px;
+    padding: 15px;
 }
 
 nav ul li a:hover{
-  background-color: #c28654;
+  background-color: #d823c0;
   border-radius: 10px;
 }
